# serde_stream

./: Cargo.toml  README.md
src/: lib.rs
